--- a/docs/connecting.asciidoc
+++ b/docs/connecting.asciidoc
@@ -21,184 +21,99 @@ providers.
 [[auth-ec]]
 ==== Elastic Cloud
 
-You can connect to Elastic Cloud using **Basic authentication**:
+You can connect to https://www.elastic.co/cloud/[Elastic Cloud] using an **API key**
+and a **Cloud ID**:
 
 [source,php]
 ----
 $client = ClientBuilder::create()
    ->setElasticCloudId('<cloud-id>')
-   ->setBasicAuthentication('<username>', '<password>')
+   ->setApiKey('<api-key>')
    ->build();
 ----
 
-Where <cloud-id> is reported in the Deployment UI, and <username>, <password> 
-are generated when you deploy a new cloud instance. You need to store the 
-<username> and <password> since they will not be available via UI.
+Where <cloud-id> and <api-key> can be retrieved using the Elastic Cloud web UI.
 
-Or using an **API key**:
+You can get the `Cloud ID` from the `My deployment` page of your dashboard (see the red
+rectangle reported in the screenshot).
 
-[source,php]
-----
-$client = ClientBuilder::create()
-   ->setElasticCloudId('<cloud-id>')
-   ->setApiKey('<id>', '<key>')
-   ->build();
-----
+image::images/cloud_id.png[alt="Elastic Cloud ID",align="center"]
 
-Where <id> and <key> are generated when you create a new API key. The API key is 
-equivalent to Base64(<id>:<key>). You need to store the API key since it will 
-not be available via UI.
+You can generate an `API key` in the `Management` page under the section `Security`.
+
+image::images/create_api_key.png[alt="Create API key",align="center"]
+
+When you click on `Create API key` button you can choose a name and set the other
+options (eg. restrict privileges, expire after time, etc).
+
+image::images/api_key_name.png[alt="Choose an API name",align="center"]
+
+After this step you will get the `API key`in the API keys page. 
+
+image::images/cloud_api_key.png[alt="Cloud API key",align="center"]
+
+**IMPORTANT**: you need to copy and store the `API key`in a secure place, since you will not
+be able to view it again in Elastic Cloud.
 
 
 [discrete]
 [[auth-http]]
-==== HTTP Authentication
+==== HTTPS Authentication
 
-If your {es} server is protected by HTTP authentication, you need to provide the 
-credentials to ES-PHP so that requests can be authenticated server-side. 
-Authentication credentials are provided as part of the host array when 
-instantiating the client:
+{es} 8.0 offers https://www.elastic.co/blog/introducing-simplified-elastic-stack-security[security by default],
+that means it uses https://en.wikipedia.org/wiki/Transport_Layer_Security[TLS]
+for protect the communication between client and server.
 
-[source,php]
-----
-$hosts = [
-    'http://user:pass@localhost:9200',       // HTTP Basic Authentication
-    'http://user2:pass2@other-host.com:9200' // Different credentials on different host
-];
+In order to configure `elasticsearch-php` for connecting to {es} 8.0 we
+need to have the certificate authority file (CA).
 
-$client = ClientBuilder::create()
-                    ->setHosts($hosts)
-                    ->build();
-----
+You can install {es} in different ways, for instance using https://www.elastic.co/guide/en/elasticsearch/reference/current/docker.html[Docker]
+you need to execute the followind command:
 
-Credentials are provided per-host, which allows each host to have their own set 
-of credentials. All requests sent to the cluster use the appropriate credentials 
-depending on the node being talked to.
+[source,shell]
+--------------------------
+docker pull docker.elastic.co/elasticsearch/elasticsearch:8.0.1
+--------------------------
 
+Once you have the docker image installed you can execute {es},
+for instance using a single-node cluster configuration, as follows:
 
-[discrete]
-[[auth-apikey]]
-==== ApiKey authentication
+[source,shell]
+--------------------------
+docker network create elastic
+docker run --name es01 --net elastic -p 9200:9200 -p 9300:9300 -it docker.elastic.co/elasticsearch/elasticsearch:8.0.1
+--------------------------
 
-If your {es} cluster is secured by API keys as described 
-{ref-7x}/security-api-create-api-key.html[here], you can use these values to 
-connect the client with your cluster, as illustrated in the following code 
-snippet.
+This command creates an `elastic` Docker network and start {es}
+using the port `9200` (default).
 
-[source,php]
-----
-$client = ClientBuilder::create()
-                    ->setApiKey('id', 'api_key') <1>
-                    ->build();
-----
-<1> ApiKey pair of `id` and `api_key` from the create API key response.
+When you run the docker imnage a password is generated for the `elastic` user
+and it's printed to the terminal (you might need to scroll back a bit in the terminal
+to view it). You have to copy it since we will need to connect to {es}.
 
+Now that {es} is running we can get the `http_ca.crt` file certificate.
+We need to copy it from the docker instance, using the following command:
 
-[discrete]
-[[ssl-encryption]]
-==== SSL encryption
+[source,shell]
+--------------------------
+docker cp es01:/usr/share/elasticsearch/config/certs/http_ca.crt .
+--------------------------
 
-Configuring SSL is a little more complex. You need to identify if your 
-certificate has been signed by a public Certificate Authority (CA), or if it is 
-a self-signed certificate.
-
-[NOTE]
-.A note on libcurl version
-=================
-If you believe the client is configured to correctly use SSL, but it simply is 
-not working, check your libcurl version. On certain platforms, various features 
-may or may not be available depending on version number of libcurl. For example, 
-the `--cacert` option was not added to the OSX version of libcurl until version 
-7.37.1. The `--cacert` option is equivalent to PHP's `CURLOPT_CAINFO` constant, 
-meaning that custom certificate paths will not work on lower versions.
-
-If you are encountering problems, update your libcurl version and/or check the 
-http://curl.haxx.se/changes.html[curl changelog].
-=================
-
-
-[discrete]
-===== Public CA Certificates
-
-If your certificate has been signed by a public Certificate Authority and your 
-server has up-to-date root certificates, you only need to use `https` in the 
-host path. The client automatically verifies SSL certificates:
+Once we have the `http_ca.crt` certificate and the `password`, copied during the
+start of {es} , we can use it to connect with `elasticsearch-php`
+as follows:
 
 [source,php]
-----
-$hosts = [
-    'https://localhost:9200' <1>
-];
-
+--------------------------
 $client = ClientBuilder::create()
-                    ->setHosts($hosts)
-                    ->build();
-----
-<1> Note that `https` is used, not `http`
+    ->setHosts(['https://localhost:9200'])
+    ->setBasicAuthentication('elastic', 'password copied during Elasticsearch start')
+    ->setCABundle('path/to/http_ca.crt')
+    ->build();
+--------------------------
 
-
-If your server has out-dated root certificates, you may need to use a 
-certificate bundle. For PHP clients, the best way is to use 
-https://github.com/composer/ca-bundle[composer/ca-bundle]. Once installed, you 
-need to tell the client to use your certificates instead of the system-wide 
-bundle. To do this, specify the path to verify:
-
-[source,php]
-----
-$hosts = ['https://localhost:9200'];
-$caBundle = \Composer\CaBundle\CaBundle::getBundledCaBundlePath();
-
-$client = ClientBuilder::create()
-                    ->setHosts($hosts)
-                    ->setSSLVerification($caBundle)
-                    ->build();
-----
-
-
-[discrete]
-===== Self-signed Certificates
-
-Self-signed certificates are certs that have not been signed by a public CA. 
-They are signed by your own organization. Self-signed certificates are often 
-used for internal purposes, when you can securely spread the root certificate
-yourself. It should not be used when being exposed to public consumers, since 
-this leaves the client vulnerable to man-in-the-middle attacks.
-
-If you are using a self-signed certificate, you need to provide the certificate 
-to the client. This is the same syntax as specifying a new root bundle, but 
-instead you point to your certificate:
-
-[source,php]
-----
-$hosts = ['https://localhost:9200'];
-$myCert = 'path/to/cacert.pem';
-
-$client = ClientBuilder::create()
-                    ->setHosts($hosts)
-                    ->setSSLVerification($myCert)
-                    ->build();
-----
-
-
-[discrete]
-[[http-ssl]]
-==== Using authentication with SSL
-
-It is possible to use HTTP authentication with SSL. Simply specify `https` in 
-the URI, configure SSL settings as required and provide authentication 
-credentials. For example, this snippet authenticates using Basic HTTP auth and a 
-self-signed certificate:
-
-[source,php]
-----
-$hosts = ['https://user:pass@localhost:9200'];
-$myCert = 'path/to/cacert.pem';
-
-$client = ClientBuilder::create()
-                    ->setHosts($hosts)
-                    ->setSSLVerification($myCert)
-                    ->build();
-----
+For more information about the Docker configuration of Elasticsearch you can
+read the official documentation https://www.elastic.co/guide/en/elasticsearch/reference/current/docker.html[here].
 
 
 [discrete]
@@ -220,7 +135,7 @@ respectively.
 ==== Indexing a document
 
 In elasticsearch-php, almost everything is configured by associative arrays. The 
-REST endpoint, document and optional parameters - everything is an associative 
+REST endpoint, body and optional parameters - everything is an associative 
 array.
 
 To index a document, we need to specify three pieces of information: index, id 
@@ -237,25 +152,43 @@ $params = [
 ];
 
 $response = $client->index($params);
-print_r($response);
+print_r($response->asArray());
 ----------------------------
 
 The response that you get back indicates that the document was created in the 
-index that you specified. The response is an associative array containing a 
-decoded version of the JSON that {es} returns:
+index that you specified. The `$response` is an object of `Elastic\Elasticsearch\Response\Elasticsearch`
+class that implements `ElasticsearchInterface`, PSR-7 https://www.php-fig.org/psr/psr-7/#33-psrhttpmessageresponseinterface[ResponseInterface]
+and https://www.php.net/manual/en/class.arrayaccess.php[ArrayAccess].
+
+This means the `$response` is a https://www.php-fig.org/psr/psr-7/[PSR-7]
+object:
+
+[source,php]
+----------------------------
+echo $response->getStatusCode(); // 200
+echo (string) $response->getBody(); // Response body in JSON
+----------------------------
+
+and also an "array", meaning you can access the response body as an
+associative array, as follows:
+
+[source,php]
+----------------------------
+echo $response['version']['number']; // 8.0.0
+
+var_dump($response->asArray());  // response body content as array
+----------------------------
+
+Moreover, you can access the response body as object, string or bool:
 
 
 [source,php]
 ----------------------------
-Array
-(
-    [_index] => my_index
-    [_type] => _doc
-    [_id] => my_id
-    [_version] => 1
-    [created] => 1
-)
+echo $response->version->number; // 8.0.0
 
+var_dump($response->asObject()); // response body content as object
+var_dump($response->asString()); // response body as string (JSON)
+var_dump($response->asBool());   // true if HTTP response code between 200 and 300
 ----------------------------
 
 
@@ -272,9 +205,8 @@ $params = [
 ];
 
 $response = $client->get($params);
-print_r($response);
+print_r($response->asArray());
 ----------------------------
-
 
 The response contains metadata such as index, version, and so on as well as a 
 `_source` field, which is the original document you sent to {es}.
@@ -317,7 +249,7 @@ $params = [
 ];
 
 $response = $client->search($params);
-print_r($response);
+print_r($response->asArray());
 ----------------------------
 
 The response here is different from the previous ones. You can see metadata 
@@ -374,7 +306,7 @@ $params = [
 ];
 
 $response = $client->delete($params);
-print_r($response);
+print_r($response->asArray());
 ----------------------------
 
 This syntax is identical to the `get` syntax. The only difference is the 
@@ -407,7 +339,7 @@ $deleteParams = [
     'index' => 'my_index'
 ];
 $response = $client->indices()->delete($deleteParams);
-print_r($response);
+print_r($response->asArray());
 ----------------------------
 
 The response:
@@ -441,7 +373,7 @@ $params = [
 ];
 
 $response = $client->indices()->create($params);
-print_r($response);
+print_r($response->asArray());
 ----------------------------
 
 {es} now creates that index with your chosen settings and return an 
