New documentation for 8.0

--- a/docs/index.asciidoc
+++ b/docs/index.asciidoc
@@ -9,14 +9,10 @@ include::installation.asciidoc[]
 
 include::connecting.asciidoc[]
 
+include::usage.asciidoc[]
+
 include::configuration.asciidoc[]
 
 include::operations.asciidoc[]
 
-include::build/classes.asciidoc[]
-
-include::helpers.asciidoc[]
-
 include::release-notes.asciidoc[]
-
-include::redirects.asciidoc[]
