--- a/docs/http-client.asciidoc
+++ b/docs/http-client.asciidoc
@@ -20,12 +20,53 @@ $client = ClientBuilder::create()
 
 For instance, in this example we used the https://symfony.com/doc/current/http_client.html[Symfony HTTP Client].
 
+[discrete]
+==== Settings the client options
 
+If you want you can set the options for a specific PSR-18 client
+using the `ClientBuilder::setHttpClientOptions($options)` method.
+The `$options` is an array of key:value options that are 
+specifics to the HTTP client used.
+
+For instance, if you are using Guzzle (default) and you need to use a
+https://docs.guzzlephp.org/en/stable/request-options.html#proxy[proxy]
+you can use the following settings:
+
+[source,php]
+----
+$client = ClientBuilder::create()
+    ->setHttpClientOptions([
+        'proxy' => 'http://localhost:8125'
+    ])
+    ->build();
+----
+
+
+[discrete]
 ==== Configure the HTTP async client
 
 Elasticsearch-php can works using an asyncronous HTTP client that implements
 the https://github.com/php-http/httplug/blob/master/src/HttpAsyncClient.php[HttpAsyncClient] interface
 of the http://httplug.io/[HTTPlug] project.
+
+Unfortunately, there is not yet a PSR standard for HTTP async client.
+We used the HTTPlug interface that is quite simple, as follows:
+
+[source,php]
+----
+namespace Http\Client;
+
+use Http\Promise\Promise;
+use Psr\Http\Message\RequestInterface; // PSR-7 response
+
+interface HttpAsyncClient
+{
+    /**
+     * @return Promise
+     */
+    public function sendAsyncRequest(RequestInterface $request);
+}
+----
 
 You can enable the HTTP async in elasticsearch-php using the `setAsync()` function,
 as follows:
@@ -48,9 +89,9 @@ for ($i=0; $i<10; $i++) {
 }
 ----
 
-The previous example stores 10 random documents in parallel using the
-HTTP asyncronous feature. The `$promise` response is an object of
-https://github.com/php-http/promise/blob/master/src/Promise.php[promises/a+] interface.
+The previous example stores 10 random documents using the HTTP asyncronous feature.
+The `$promise` response is an object of https://github.com/php-http/promise/blob/master/src/Promise.php[promises/a+]
+interface.
 
 A promise represents a single result of an asynchronous operation.
 It is not necessarily available at a specific time, but should become in the future.
