--- a/docs/connecting.asciidoc
+++ b/docs/connecting.asciidoc
@@ -11,7 +11,7 @@ This page contains the information you need to connect and use the Client with
 
 [discrete]
 [[auth-ec]]
-==== Elastic Cloud
+=== Elastic Cloud
 
 You can connect to https://www.elastic.co/cloud/[Elastic Cloud] using an **API key**
 and a **Cloud ID**:
