Added redirects in index.asciidoc

--- a/docs/index.asciidoc
+++ b/docs/index.asciidoc
@@ -16,3 +16,5 @@ include::configuration.asciidoc[]
 include::operations.asciidoc[]
 
 include::release-notes.asciidoc[]
+
+include::redirects.asciidoc[]
