New documentation for 8 (#1215)
* Updated VERSION to 8.x

* WIP: new docs for 8.0

* New documentation for 8.0

* Update docs/breaking-changes.asciidoc

Co-authored-by: István Zoltán Szabó <istvan.szabo@elastic.co>

* Update docs/connecting.asciidoc

Co-authored-by: István Zoltán Szabó <istvan.szabo@elastic.co>

* Update docs/connecting.asciidoc

Co-authored-by: István Zoltán Szabó <istvan.szabo@elastic.co>

* Update docs/release-notes.asciidoc

Co-authored-by: István Zoltán Szabó <istvan.szabo@elastic.co>

* Update docs/release-notes.asciidoc

Co-authored-by: István Zoltán Szabó <istvan.szabo@elastic.co>

* Update docs/usage.asciidoc

Co-authored-by: István Zoltán Szabó <istvan.szabo@elastic.co>

* Update docs/usage.asciidoc

Co-authored-by: István Zoltán Szabó <istvan.szabo@elastic.co>

* Update docs/http-client.asciidoc

Co-authored-by: István Zoltán Szabó <istvan.szabo@elastic.co>

* Update docs/http-client.asciidoc

Co-authored-by: István Zoltán Szabó <istvan.szabo@elastic.co>

* Update docs/breaking-changes.asciidoc

Co-authored-by: István Zoltán Szabó <istvan.szabo@elastic.co>

* Update docs/breaking-changes.asciidoc

Co-authored-by: István Zoltán Szabó <istvan.szabo@elastic.co>

* Update docs/breaking-changes.asciidoc

Co-authored-by: István Zoltán Szabó <istvan.szabo@elastic.co>

* Update docs/node-pool.asciidoc

Co-authored-by: István Zoltán Szabó <istvan.szabo@elastic.co>

* Update docs/breaking-changes.asciidoc

Co-authored-by: István Zoltán Szabó <istvan.szabo@elastic.co>

* Added redirects.asciidoc with some changes

* Added redirects in index.asciidoc

Co-authored-by: István Zoltán Szabó <istvan.szabo@elastic.co>

--- a/docs/index.asciidoc
+++ b/docs/index.asciidoc
@@ -9,13 +9,11 @@ include::installation.asciidoc[]
 
 include::connecting.asciidoc[]
 
+include::usage.asciidoc[]
+
 include::configuration.asciidoc[]
 
 include::operations.asciidoc[]
-
-include::build/classes.asciidoc[]
-
-include::helpers.asciidoc[]
 
 include::release-notes.asciidoc[]
 
