--- a/docs/release-notes.asciidoc
+++ b/docs/release-notes.asciidoc
@@ -1,6 +1,7 @@
 [[release-notes]]
 == Release notes
 
+* <<rn-8-1-0>>
 * <<rn-8-0-1>>
 * <<rn-8-0-0>>
 * <<rn-7-17-0>>
@@ -31,6 +32,12 @@
 * <<rn-7-0-2>>
 * <<rn-7-0-1>>
 * <<rn-7-0-0>>
+
+[discrete]
+[[rn-8-1-0]]
+=== 8.1.0
+
+* updated APIs for https://www.elastic.co/guide/en/elasticsearch/reference/8.1/release-notes-8.1.0.html[Elasticsearch 8.1]
 
 [discrete]
 [[rn-8-0-1]]
