--- a/docs/release-notes.asciidoc
+++ b/docs/release-notes.asciidoc
@@ -1,6 +1,7 @@
 [[release-notes]]
 == Release notes
 
+* <<rn-8-2-0>>
 * <<rn-8-1-0>>
 * <<rn-8-0-1>>
 * <<rn-8-0-0>>
@@ -32,6 +33,13 @@
 * <<rn-7-0-2>>
 * <<rn-7-0-1>>
 * <<rn-7-0-0>>
+
+[discrete]
+[[rn-8-2-0]]
+=== 8.2.0
+
+* updated APIs for https://www.elastic.co/guide/en/elasticsearch/reference/8.2/release-notes-8.2.0.html[Elasticsearch 8.2]
+* Added the array support for text/plain https://github.com/elastic/elasticsearch-php/pull/1220[#1220]
 
 [discrete]
 [[rn-8-1-0]]
