--- a/docs/community.asciidoc
+++ b/docs/community.asciidoc
@@ -119,6 +119,6 @@ https://github.com/Nexucis/es-php-index-helper[Link: nexucis/es-php-index-helper
 [quote, Index Helper]
 _____________________
 This helper is a light library which wrap the official client elasticsearch-php. It will help you to manage your ES Indices with no downtime.
-This helper implements the philosophy described in the https://www.elastic.co/guide/en/elasticsearch/guide/{branch}/index-aliases.html[official documentation]
+This helper implements the philosophy described in the https://www.elastic.co/guide/en/elasticsearch/guide/master/index-aliases.html[official documentation]
 which can be summarized in a few words : *use alias instead of index directly*
 _____________________
