--- a/docs/release-notes.asciidoc
+++ b/docs/release-notes.asciidoc
@@ -1,6 +1,7 @@
 [[release-notes]]
 == Release notes
 
+* <<rn-8-5-0>>
 * <<rn-8-4-0>>
 * <<rn-8-3-0>>
 * <<rn-8-2-0>>
@@ -35,6 +36,12 @@
 * <<rn-7-0-2>>
 * <<rn-7-0-1>>
 * <<rn-7-0-0>>
+
+[discrete]
+[[rn-8-5-0]]
+=== 8.5.0
+
+* Updated the API endpoints to Elasticserach 8.5.0
 
 [discrete]
 [[rn-8-4-0]]
