[DOCS] Adds doctype to index file.

--- a/docs/index.asciidoc
+++ b/docs/index.asciidoc
@@ -1,6 +1,8 @@
 
 = Elasticsearch-PHP
 
+:doctype:           book
+
 include::{asciidoc-dir}/../../shared/attributes.asciidoc[]
 
 include::overview.asciidoc[]
