[DOCS] Adds shared/versions to include in index.

--- a/docs/index.asciidoc
+++ b/docs/index.asciidoc
@@ -3,6 +3,7 @@
 
 :doctype:           book
 
+include::{docs-root}/shared/versions/stack/{source_branch}.asciidoc[]
 include::{asciidoc-dir}/../../shared/attributes.asciidoc[]
 
 include::overview.asciidoc[]
