--- a/docs/connecting.asciidoc
+++ b/docs/connecting.asciidoc
@@ -230,7 +230,7 @@ behaviour by setting the Elasticsearch system property `es.rest.url_plus_as_spac
 You can read the https://www.elastic.co/guide/en/elasticsearch/reference/7.17/breaking-changes-7.4.html#_changes_to_encoding_plus_signs_in_urls[Elasticsearch release note]
 for mote information.
 
-Starting from elasticsearch-php 7.17.2 we introduced an environmental variable `ELASTIC_CLIENT_URL_PLUS_AS_SPACE`
+Starting from elasticsearch-php 7.17.2, we introduced an environmental variable `ELASTIC_CLIENT_URL_PLUS_AS_SPACE`
 that can be used to encode a space using `+`, setting the variable to `true`.
 If `ELASTIC_CLIENT_URL_PLUS_AS_SPACE` is set to `false` a space will be encoded using `%20`
 as specified in https://www.rfc-editor.org/rfc/rfc3986[RFC 3986].
