--- a/docs/index.asciidoc
+++ b/docs/index.asciidoc
@@ -8,7 +8,7 @@ include::{asciidoc-dir}/../../shared/attributes.asciidoc[]
 
 include::overview.asciidoc[]
 
-include:: gettins-started.asciidoc[]
+include:: getting-started.asciidoc[]
 
 include::installation.asciidoc[]
 
