--- a/docs/release-notes.asciidoc
+++ b/docs/release-notes.asciidoc
@@ -1,6 +1,8 @@
 [[release-notes]]
 == Release notes
 
+* <<rn-8-9-0>>
+* <<rn-8-8-0>>
 * <<rn-8-7-0>>
 * <<rn-8-6-1>>
 * <<rn-8-5-0>>
@@ -38,6 +40,22 @@
 * <<rn-7-0-2>>
 * <<rn-7-0-1>>
 * <<rn-7-0-0>>
+
+[discrete]
+[[rn-8-9-0]]
+=== 8.9.0
+
+* Updated the API endpoints to Elasticserach 8.9.0
+* Fixed issue with psr/http-message, changed PSR-7 versions to 1.1 and 2.0
+  https://github.com/elastic/elasticsearch-php/pull/1344[#1344]
+
+[discrete]
+[[rn-8-8-0]]
+=== 8.8.0
+
+* Updated the API endpoints to Elasticserach 8.8.0
+* Added SearchHitIterators and SearchResponseIterator helpers revised with new version 
+  https://github.com/elastic/elasticsearch-php/pull/1302[#1302]
 
 [discrete]
 [[rn-8-7-0]]
