Fixed setHosts in docs

--- a/docs/getting-started.asciidoc
+++ b/docs/getting-started.asciidoc
@@ -51,7 +51,7 @@ endpoint.
 [source,php]
 ----
 $client = ClientBuilder::create()
-   ->setElasticsearchEndpoint('<elasticsearch-endpoint>')
+   ->setHosts(['<elasticsearch-endpoint>'])
    ->setApiKey('<api-key>')
    ->build();
 ----
