--- a/docs/release-notes.asciidoc
+++ b/docs/release-notes.asciidoc
@@ -1,6 +1,7 @@
 [[release-notes]]
 == Release notes
 
+* <<rn-8-10-0>>
 * <<rn-8-9-0>>
 * <<rn-8-8-0>>
 * <<rn-8-7-0>>
@@ -40,6 +41,12 @@
 * <<rn-7-0-2>>
 * <<rn-7-0-1>>
 * <<rn-7-0-0>>
+
+[discrete]
+[[rn-8-10-0]]
+=== 8.10.0
+
+* Updated the API endpoints to Elasticserach 8.10.0
 
 [discrete]
 [[rn-8-9-0]]
