--- a/docs/index.asciidoc
+++ b/docs/index.asciidoc
@@ -6,6 +6,8 @@
 include::{docs-root}/shared/versions/stack/{source_branch}.asciidoc[]
 include::{asciidoc-dir}/../../shared/attributes.asciidoc[]
 
+:es-docs: https://www.elastic.co/guide/en/elasticsearch/reference/{branch} 
+
 include::overview.asciidoc[]
 
 include::getting-started.asciidoc[]
@@ -21,6 +23,8 @@ include::configuration.asciidoc[]
 include::operations.asciidoc[]
 
 include::helpers.asciidoc[]
+
+include::esql.asciidoc[]
 
 include::release-notes.asciidoc[]
 
