--- a/docs/helpers/iterators.asciidoc
+++ b/docs/helpers/iterators.asciidoc
@@ -1,24 +1,16 @@
-[[client-helpers]]
-== Client helpers
-
-The client comes with helpers to give you a more comfortable experience with 
-some APIs.
-
-
-[discrete]
 [[iterators]]
 === Iterators
 
+The PHP client includes helpers for iterating through results by page or by hits.
 
-[discrete]
 [[search-response-iterator]]
 ==== Search response iterator
 
-The `SearchResponseIterator` can be used to iterate page by page in a search 
+Use the `SearchResponseIterator` to iterate page by page in a search 
 result using 
 https://www.elastic.co/guide/en/elasticsearch/reference/current/paginate-search-results.html#paginate-search-results[pagination].
 
-An example as follows:
+Here's an example:
 
 [source,php]
 ----
@@ -50,11 +42,11 @@ foreach($pages as $page) {
 [[search-hit-iterator]]
 ==== Search hit iterator
 
-The `SearchHitIterator` can be used to iterate in a `SearchResponseIterator` 
+Use the `SearchHitIterator` to iterate in a `SearchResponseIterator` 
 without worrying about 
 https://www.elastic.co/guide/en/elasticsearch/reference/current/paginate-search-results.html#paginate-search-results[pagination].
 
-An example as follows:
+Here's an example:
 
 [source,php]
 ----
