[DOCS] Add ES|QL doc structure (#1403)
* Tweak TOC

* TOC title experiment

* Add folder structure for helpers

* Adapted the ESQL doc template for PHP

* Minor edits

* Revert "Minor edits"

This reverts commit adfac627c0eb81e903fb6da2b396078b5650113c.

* Minor edits this time without extra files :-/

---------

Co-authored-by: Enrico Zimuel <e.zimuel@gmail.com>

--- a/docs/index.asciidoc
+++ b/docs/index.asciidoc
@@ -6,6 +6,8 @@
 include::{docs-root}/shared/versions/stack/{source_branch}.asciidoc[]
 include::{asciidoc-dir}/../../shared/attributes.asciidoc[]
 
+:es-docs: https://www.elastic.co/guide/en/elasticsearch/reference/{branch} 
+
 include::overview.asciidoc[]
 
 include::getting-started.asciidoc[]
@@ -20,7 +22,7 @@ include::configuration.asciidoc[]
 
 include::operations.asciidoc[]
 
-include::helpers.asciidoc[]
+include::helpers/index.asciidoc[]
 
 include::release-notes.asciidoc[]
 
