--- a/docs/release-notes.asciidoc
+++ b/docs/release-notes.asciidoc
@@ -1,6 +1,7 @@
 [[release-notes]]
 == Release notes
 
+* <<rn-8-14-0>>
 * <<rn-8-13-0>>
 * <<rn-8-12-0>>
 * <<rn-8-11-0>>
@@ -44,6 +45,12 @@
 * <<rn-7-0-2>>
 * <<rn-7-0-1>>
 * <<rn-7-0-0>>
+
+[discrete]
+[[rn-8-14-0]]
+=== 8.14.0
+
+* Updated the API endpoints to Elasticserach 8.14.0
 
 [discrete]
 [[rn-8-13-0]]
