--- a/docs/release-notes.asciidoc
+++ b/docs/release-notes.asciidoc
@@ -1,6 +1,7 @@
 [[release-notes]]
 == Release notes
 
+* <<rn-8-15-0>>
 * <<rn-8-14-0>>
 * <<rn-8-13-0>>
 * <<rn-8-12-0>>
@@ -45,6 +46,15 @@
 * <<rn-7-0-2>>
 * <<rn-7-0-1>>
 * <<rn-7-0-0>>
+
+[discrete]
+[[rn-8-15-0]]
+=== 8.15.0
+
+* Updated the API endpoints to Elasticserach 8.15.0
+* Added the OpenTelemetry support, for more information
+  you can refer to the https://github.com/elastic/elastic-transport-php?tab=readme-ov-file#opentelemetry[elastic-transport-php]
+  documentation
 
 [discrete]
 [[rn-8-14-0]]
