--- a/docs/release-notes.asciidoc
+++ b/docs/release-notes.asciidoc
@@ -1,6 +1,7 @@
 [[release-notes]]
 == Release notes
 
+* <<rn-8-16-0>>
 * <<rn-8-15-0>>
 * <<rn-8-14-0>>
 * <<rn-8-13-0>>
@@ -46,6 +47,14 @@
 * <<rn-7-0-2>>
 * <<rn-7-0-1>>
 * <<rn-7-0-0>>
+
+[discrete]
+[[rn-8-16-0]]
+=== 8.16.0
+
+* Updated the API endpoints to Elasticserach 8.16.0
+* Added the support of PHP 8.4
+  https://github.com/elastic/elasticsearch-php/pull/1415[#1415]
 
 [discrete]
 [[rn-8-15-0]]
